# GridCSPs

./: .gitignore  .gitmodules  CMakeLists.txt  Contributors.md  ContributorsList.txt  Doxyfile  LICENSE  README.md  cleanIncompatible.c  getPath.c  helpers.h  isThereSolution.c  listColoring.c  listColoring.h  listColoringExample.tex  memoMan.c  nextLayer.c  pigeonhole.c  printLCInstance.c  readLCInstance.c  reconstructSolution.c  rowToODD.c  show.c
apps/: Instance.cpp  IsThereSolution.cpp  Solver.cpp
instances/: lcInstanceBinary  lcInstanceBinary.c  listColoring.h  makefile  odd.h
lib/ListColoring/: Instances.cpp  Instances.h  LegacyReader.cpp  LegacyReader.h  LegacyWriter.cpp  LegacyWriter.h  ListColoring.cpp  ListColoring.h  Solver.cpp  Solver.h  SpaceReduction.cpp  SpaceReduction.h
res/: exampleNoComments.txt  simpleNoSolution.txt
test/: LegacyIO.cpp  ListColoringClass.cpp  Sample.cpp  Solver.cpp  SpaceReduction.cpp
test/Instances/: Instances.cpp  Instances.h
test_cases/pigeonhole_test/: pigeonhole_test.c
